favorites delete bug squashed, hopefully

--- a/final-project-client/src/scss/_details.scss
+++ b/final-project-client/src/scss/_details.scss
@@ -2,10 +2,12 @@
   color: black;
   font-size: 1.1em;
   line-height: 1.2em;
-  width: 470px;
+  // width: 200px;
+  // border: 2px solid red;
 }
 
 .card.detail-card {
+  height: 60vh;
   width: 50vw;
   margin: 30px auto;
   padding: 10px 10px 10px 10px;
